# donati-tarama-arayuz

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  README.md  TEST_REHBERI.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_ilk_sema.py
app/: config.py  db.py  db_models.py  main.py  storage.py
app/datasource/: base.py  factory.py  mock_source.py  serial_source.py
app/generators/: image_generator.py  mock_generator.py
app/models/: tarama.py
app/report/: pdf_rapor.py
app/report/fonts/: OKU.md
app/routers/: tarama.py
app/services/: analiz.py  tarama_service.py
deploy/: docker-entrypoint.sh  donati-tarama.service  kiosk-baslat.sh
deploy/jenkins/: Dockerfile  docker-compose.yml
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  gorsel-panel.js  ozet-panel.js
tests/: conftest.py  test_akis.py  test_analiz.py  test_saglik.py  test_tarama_api.py
